--- a/1_get_data.qmd
+++ b/1_get_data.qmd
@@ -207,7 +207,9 @@ ggplot(d_trial,
 ```{r}
 d_sub <- d_trial |>
   group_by(dataset_name, subject_id, administration_id, age) |>
-  summarise(across(c(contains("_window"),"rt","log_rt"), ~mean(.x, na.rm=TRUE)))
+  summarise(n_trials = sum(!is.na(long_window_accuracy)), 
+            n_trials_rt = sum(!is.na(rt)),
+            across(c(contains("_window"),"rt","log_rt"), ~mean(.x, na.rm=TRUE)))
 ```
 
 Add CDIs.
